fix overflow issue on mobile when opening menu remove some compiled bootstrap files not essential to the system.

--- a/less/adminpanel/cim/core.less
+++ b/less/adminpanel/cim/core.less
@@ -80,6 +80,7 @@ button {
   width: 100%;
   height: auto;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 
